--- a/Smart.Mock.Data.nuspec
+++ b/Smart.Mock.Data.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>Usa.Smart.Mock.Data</id>
     <version>1.0.2</version>
-    <title>Smart.Mock.Data</title>
+    <title>Smart.Mock.Data .NET</title>
     <authors>machi_pon</authors>
     <owners>machi_pon</owners>
     <description>Smart mock data library for .NET</description>
