--- a/Smart.Mock.Data.Test.Net4/Smart.Mock.Data.Test.Net4.csproj
+++ b/Smart.Mock.Data.Test.Net4/Smart.Mock.Data.Test.Net4.csproj
@@ -5,14 +5,15 @@
     <RootNamespace>Smart.Mock</RootNamespace>
   </PropertyGroup>
 
-  <ItemGroup>
-    <Compile Remove="Infrastructure\MockConnectionFactory.cs" />
-  </ItemGroup>
+  <PropertyGroup>
+    <CodeAnalysisRuleSet>..\Smart.Mock.Data.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="1.50.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
     <PackageReference Include="Microsoft.SqlServer.TransactSql.ScriptDom" Version="13.0.1700.77" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.0.0" />
     <PackageReference Include="System.Data.Common" Version="4.1.0" />
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
