--- a/Smart.Mock.Data.SqlServer.nuspec
+++ b/Smart.Mock.Data.SqlServer.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>Usa.Smart.Mock.Data.SqlServer</id>
-    <version>0.3.0.0</version>
+    <version>1.1.0.0-beta</version>
     <title>Smart.Mock.Data.SqlServer .NET</title>
     <authors>machi_pon</authors>
     <owners>machi_pon</owners>
@@ -13,14 +13,14 @@
     <copyright></copyright>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <dependencies>
-      <dependency id="Usa.Smart.Mock.Data" version="1.0.3" />
-      <dependency id="Microsoft.SqlServer.TransactSql.ScriptDom" version="13.0.1601.5" />
+      <dependency id="Usa.Smart.Mock.Data" version="1.1.0-beta" />
+      <dependency id="Microsoft.SqlServer.TransactSql.ScriptDom" version="13.0.1700.77" />
     </dependencies>
     <tags>smart ado.net mock sqlserver</tags>
   </metadata>
   <files>
-    <file src="Smart.Mock.Data.SqlServer\bin\Release\Smart.Mock.Data.SqlServer.dll" target="lib\net462\Smart.Mock.Data.SqlServer.dll" />
-    <file src="Smart.Mock.Data.SqlServer\bin\Release\Smart.Mock.Data.SqlServer.pdb" target="lib\net462\Smart.Mock.Data.SqlServer.pdb" />
-    <file src="Smart.Mock.Data.SqlServer\bin\Release\Smart.Mock.Data.SqlServer.xml" target="lib\net462\Smart.Mock.Data.SqlServer.xml" />
+    <file src="Smart.Mock.Data.SqlServer\bin\Release\net462\Smart.Mock.Data.SqlServer.dll" target="lib\net462" />
+    <!--<file src="Smart.Mock.Data.SqlServer\bin\Release\net462\Smart.Mock.Data.SqlServer.pdb" target="lib\net462" />-->
+    <!--<file src="Smart.Mock.Data.SqlServer\bin\Release\net462\Smart.Mock.Data.SqlServer.xml" target="lib\net462" />-->
   </files>
 </package>
