--- a/Smart.Mock.Data.Test.Net4/Smart.Mock.Data.Test.Net4.csproj
+++ b/Smart.Mock.Data.Test.Net4/Smart.Mock.Data.Test.Net4.csproj
@@ -7,6 +7,7 @@
 
   <PropertyGroup>
     <CodeAnalysisRuleSet>..\Smart.Mock.Data.ruleset</CodeAnalysisRuleSet>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
