--- a/Smart.Mock.Data.nuspec
+++ b/Smart.Mock.Data.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>Usa.Smart.Mock.Data</id>
-    <version>1.1.0.0-beta</version>
+    <version>1.1.0</version>
     <title>Smart.Mock.Data .NET</title>
     <authors>machi_pon</authors>
     <owners>machi_pon</owners>
