--- a/Smart.Mock.Data.Test.Net4/Smart.Mock.Data.Test.Net4.csproj
+++ b/Smart.Mock.Data.Test.Net4/Smart.Mock.Data.Test.Net4.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net47</TargetFramework>
+  <PropertyGroup>    
+    <TargetFramework>net47</TargetFramework>    
     <RootNamespace>Smart.Mock</RootNamespace>
   </PropertyGroup>
 
@@ -11,16 +11,26 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="1.50.2" />
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="1.1.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="1.1.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
     <PackageReference Include="Microsoft.SqlServer.TransactSql.ScriptDom" Version="14.0.3660.1" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.0.1" />
+    <PackageReference Include="System.Data.Common" Version="4.1.0" />
     <PackageReference Include="System.Runtime.Analyzers" Version="1.1.0" />
     <PackageReference Include="System.Runtime.InteropServices.Analyzers" Version="1.1.0" />
+    <PackageReference Include="xunit" Version="2.2.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Smart.Mock.Data.SqlServer\Smart.Mock.Data.SqlServer.csproj" />
     <ProjectReference Include="..\Smart.Mock.Data\Smart.Mock.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
   </ItemGroup>
 
 </Project>
