--- a/Smart.Mock.Data.nuspec
+++ b/Smart.Mock.Data.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>Usa.Smart.Mock.Data</id>
-    <version>1.0.5.0</version>
+    <version>1.1.0</version>
     <title>Smart.Mock.Data .NET</title>
     <authors>machi_pon</authors>
     <owners>machi_pon</owners>
@@ -13,12 +13,14 @@
     <copyright></copyright>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <dependencies>
+      <dependency id="NETStandard.Library" version="1.6.1" />
+      <dependency id="System.Data.Common" version="4.3.0" />
     </dependencies>
     <tags>smart ado.net mock</tags>
   </metadata>
   <files>
-    <file src="Smart.Mock.Data\bin\Release\Smart.Mock.Data.dll" target="lib\net462\Smart.Mock.Data.dll" />
-    <file src="Smart.Mock.Data\bin\Release\Smart.Mock.Data.pdb" target="lib\net462\Smart.Mock.Data.pdb" />
-    <file src="Smart.Mock.Data\bin\Release\Smart.Mock.Data.xml" target="lib\net462\Smart.Mock.Data.xml" />
+    <file src="Smart.Mock.Data\bin\Release\netstandard1.2\Smart.Mock.Data.dll" target="lib\netstandard1.2" />
+    <!--<file src="Smart.Mock.Data\bin\Release\netstandard1.2\Smart.Mock.Data.pdb" target="lib\netstandard1.2" />-->
+    <!--<file src="Smart.Mock.Data\bin\Release\netstandard1.2\Smart.Mock.Data.xml" target="lib\netstandard1.2" />-->
   </files>
 </package>
