--- a/Smart.Mock.Data.nuspec
+++ b/Smart.Mock.Data.nuspec
@@ -13,14 +13,20 @@
     <copyright></copyright>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <dependencies>
-      <dependency id="NETStandard.Library" version="2.0.0" />
-      <dependency id="System.Data.Common" version="4.3.0" />
+      <group>
+      </group>
+      <group targetFramework="netstandard2.0">
+        <dependency id="System.Data.Common" version="4.3.0" />
+      </group>
+      <group targetFramework="net462">
+      </group>
     </dependencies>
     <tags>smart ado.net mock</tags>
   </metadata>
   <files>
+    <!-- netstandard2.0 -->
     <file src="Smart.Mock.Data\bin\Release\netstandard2.0\Smart.Mock.Data.dll" target="lib\netstandard2.0" />
-    <!--<file src="Smart.Mock.Data\bin\Release\netstandard2.0\Smart.Mock.Data.pdb" target="lib\netstandard2.0" />-->
-    <!--<file src="Smart.Mock.Data\bin\Release\netstandard2.0\Smart.Mock.Data.xml" target="lib\netstandard2.0" />-->
+    <!-- net462 -->
+    <file src="Smart.Mock.Data\bin\Release\net462\Smart.Mock.Data.dll" target="lib\net462" />
   </files>
 </package>
