--- a/Smart.Mock.Data.SqlServer.nuspec
+++ b/Smart.Mock.Data.SqlServer.nuspec
@@ -13,8 +13,14 @@
     <copyright></copyright>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <dependencies>
-      <dependency id="Usa.Smart.Mock.Data" version="1.5.0" />
-      <dependency id="Microsoft.SqlServer.TransactSql.ScriptDom" version="15.0.4200.1" />
+      <group targetFramework="netstandard2.0">
+        <dependency id="Usa.Smart.Mock.Data" version="1.5.0" />
+        <dependency id="Microsoft.SqlServer.DacFx" version="150.4384.2-preview" />
+      </group>
+      <group targetFramework="net462">
+        <dependency id="Usa.Smart.Mock.Data" version="1.5.0" />
+        <dependency id="Microsoft.SqlServer.DacFx" version="150.4384.2-preview" />
+      </group>
     </dependencies>
     <tags>smart ado.net mock sqlserver</tags>
   </metadata>
