--- a/Smart.Mock.Data.SqlServer.nuspec
+++ b/Smart.Mock.Data.SqlServer.nuspec
@@ -13,7 +13,7 @@
     <copyright></copyright>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <dependencies>
-      <group targetFramework="netstandard2.0">
+      <group targetFramework="netcoreapp2.2">
         <dependency id="Usa.Smart.Mock.Data" version="1.5.0" />
         <dependency id="Microsoft.SqlServer.DacFx" version="150.4384.2-preview" />
       </group>
@@ -25,6 +25,8 @@
     <tags>smart ado.net mock sqlserver</tags>
   </metadata>
   <files>
+    <!-- netcoreapp2.2 -->
+    <file src="Smart.Mock.Data.SqlServer\bin\Release\netcoreapp2.2\Smart.Mock.Data.SqlServer.dll" target="lib\netcoreapp2.2" />
     <!-- net462 -->
     <file src="Smart.Mock.Data.SqlServer\bin\Release\net462\Smart.Mock.Data.SqlServer.dll" target="lib\net462" />
   </files>
