--- a/Smart.Mock.Data/Smart.Mock.Data.csproj
+++ b/Smart.Mock.Data/Smart.Mock.Data.csproj
@@ -6,6 +6,14 @@
     <CodeAnalysisRuleSet>..\Smart.Mock.Data.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <PackageId>Usa.Smart.Mock.Data</PackageId>
+    <Title>Smart.Mock.Data .NET</Title>
+    <Description>Smart mock data library for .NET</Description>
+    <Summary>Smart mock data library for .NET</Summary>
+    <PackageTags>smart ado.net mock</PackageTags>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="System.Data.Common" Version="4.3.0" />
   </ItemGroup>
